# data-science-miniproject

./: .gitignore  Mdata_10.02-10.23.csv  MiniProject.ipynb  README.md  app.py  bus_regular_times.xlsx  cancelled_times_query.py  data_assembler.py  gui.py  pyproject.toml  query.py  route_query.py  smeardata_20231027.csv
data/: 05.10.2023 cancelled-trip-times-data.json  07.10.2023 cancelled-trip-times-data.json  09.10.2023 cancelled-trip-times-data.json  11.10.2023 cancelled-trip-times-data.json  route_codes.json
data/cancelled_route_data/: 02.10.2023 cancelled-trip-times-data.json  10.10.2023 cancelled-trip-times-data.json  12.10.2023 cancelled-trip-times-data.json  13.10.2023 cancelled-trip-times-data.json  14.10.2023 cancelled-trip-times-data.json  15.10.2023 cancelled-trip-times-data.json  16.10.2023 cancelled-trip-times-data.json  17.10.2023 cancelled-trip-times-data.json  18.10.2023 cancelled-trip-times-data.json  19.10.2023 cancelled-trip-times-data.json  20.10.2023 cancelled-trip-times-data.json  22.10.2023 cancelled-trip-times-data.json  23.10.2023 cancelled-trip-times-data.json
