[tool.poetry]
name = "timelytransit"
version = "0.1.0"
description = "A miniproject for the course Introduction to data science"
authors = ["Matti Kähkönen <matti.kahkonen@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pysimplegui = "^4.60.5"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
matplotlib = "^3.8.0"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
